[tool.poetry]
name = "cp"
version = "0.1.0"
description = ""
authors = ["giprayogo <genki016@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.347"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
